# Slovo

./: CMakeLists.txt
app/: CMakeLists.txt
app/Src/: main.c
cmake/: functions.cmake  toolchain.cmake
dict/: dict.txt
libs/: CMakeLists.txt
libs/iconv_library/: iconv_library.c  iconv_library.h
libs/slovo_library/: slovo_library.c  slovo_library.h
scripts/: build_number.h  increment_build.sh  version.h
